fixtures/invalid/bad-api-name.lmk
@api name="123 invalid"
API names must be identifiers.
